# Siphon

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.in  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/skills/openspec-archive-change/: SKILL.md
.github/workflows/: docker-publish.yml  e2e-tests.yml  promote.yml  release.yml  unit-tests.yml  ytdlp-bump.yml
openspec/changes/add-unit-tests/: design.md  tasks.md
openspec/changes/audio-embed-metadata/: design.md  tasks.md
openspec/changes/browser-cookie-support/: design.md
openspec/changes/cli-simplify-output/: design.md  proposal.md  tasks.md
openspec/changes/deploy-ghcr-unraid/: design.md  (+1 more)
openspec/notes/: acoustid-fingerprinting.md  automated-testing.md  cli-consistency.md  custom-download-directory.md  detachable-tui.md  download-speed-indicator.md  e2e-test-gaps.md  error-handling-and-logging.md  future-ui.md  parallelism-concurrency.md  playlist-import-research.md  scheduler-trigger-research.md  security-and-auth.md  sponsorblock-download-path-gaps.md  title-separator-mb-validation.md
src/siphon/: __main__.py  api.py  app.py  cli.py  downloader.py  formats.py  job_store.py  models.py  progress.py  registry.py  renamer.py  scheduler.py  watcher.py
src/ui/: index.html  package-lock.json  package.json  vite.config.js
tests/: Makefile
tests/e2e/: conftest.py  test_cancel.py  test_cookies.py  test_health.py  test_musicbrainz.py  test_playlist_sync.py  test_renamer.py  test_renamer_tiers.py  test_scheduler.py  test_single_video.py  test_sponsorblock.py
tests/unit/: conftest.py  test_api.py  test_cookies.py  test_downloader.py  test_formats.py  test_job_store.py  test_models.py  test_progress.py  test_registry.py  test_renamer.py  test_sb_health.py  test_sb_outcome.py  test_sb_warnings.py  test_scheduler_sb.py  test_sponsorblock.py
unraid/: siphon.xml
(+238 files in other folders)
